--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,9 @@ url: https://y7kim.github.io
 baseurl: /agency-jekyll-theme/
 
 # Site settings
+header_title: Welcome To Our Agency
+header_subtitle: It's Nice to be Friends
+
 title: Awesome Title
 email: your-email@domain.com
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
